--- a/Prova 1 com CSS 28072018/Historia.css
+++ b/Prova 1 com CSS 28072018/Historia.css
@@ -51,26 +51,36 @@ main{
   margin-top: 8%;
 }
 
-main article figure{
+/*main figure{
     float: right;
+}*/
 
+main h1{
+    margin-left: 20px;
+}
+
+
+main img{
+      margin-left: 76px;
+      width: 30%;
+      /*padding: 30px;*/
+      background-color: lightgray;
+      padding: 20px;
+      padding-bottom: 40px
 
 }
 
-main article img{
-  width: 90%;
-  padding: 30px;
-  background-color: lightgray;
-}
-
-main article p{
+main article{
     float: left;
-    width: 60%;
+    width: 50%;
+    margin-left: 45px;
 }
 
-main article figure figcaption{
-    margin-left: 259px;
-    margin-top: -29px;
+main figure figcaption{
+    /*margin-left: 259px;*/
+    margin-top: -32px;
+
+    text-align: center;
 }
 
 
