--- a/Prova 1 com CSS 28072018/Historia.css
+++ b/Prova 1 com CSS 28072018/Historia.css
@@ -57,8 +57,15 @@ main{
 
 main h1{
     margin-left: 20px;
+
 }
 
+main hr{
+    width: 90%;
+    margin-left: 19.55px;
+    margin-bottom: 22px;
+    margin-top: -18px;
+}
 
 main img{
       margin-left: 76px;
